src/objects/UILookup__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Message Comment</label>
        <referenceTo>Private_Message_Comment__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication</label>
        <referenceTo>Communication__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Message</label>
        <referenceTo>Private_Message__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <referenceTo>Referral_Source__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>UILookups</relationshipLabel>
        <relationshipName>UILookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UILookup</label>
    <nameField>
        <label>UILookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UILookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>